Mobile version overflow fixed

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -104,7 +104,7 @@ picture img{
     color: var(--text-color);
     text-align: center;
     margin-top: 100px;
-    padding: 20px;
+    
 }
 
 .heroText h1{
@@ -254,7 +254,7 @@ picture img{
     text-align: center;
     margin-bottom: 50px;
     background-color: #8b8daf54;
-    padding: 80px 100px;
+    padding: 40px 20px;
 }
 
 .pricingFeatures h2{
@@ -506,4 +506,9 @@ footer{
     .footerLogo{
         width: 100px;
     }
+}
+
+html, body {
+    scroll-behavior: smooth;
+    overflow-x: hidden;
 }
